# george-classification

./: README.md  pyproject.toml
logs/: events.out.tfevents.1728577584.0a54c8c6bfa3.30.5
notebooks/: george_classification.ipynb
