[tool.poetry]
name = "george-classification"
version = "0.1.0"
description = ""
authors = ["5i2urom <gameathome2015@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
torchvision = "^0.15.2"
numpy = "^1.24.4"
pandas = "^2.0.3"
jupyter = "^1.0.0"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
